<resources>
    <string name="app_name">Medicine Reminder</string>
    <string name="title">Medicine Reminder</string>
    <string name="managemedicine">Manage Medicine</string>
    <string name="medicine_review">Medicine Review</string>
    <string name="setting">Setting</string>
    <string name="hour_minutes">HH:mm</string>
    <string name="dateformate">dd/MM/yyyy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="schedule_prompt">Select one</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="medicine_name">Medicine name</string>
    <string name="schedule">Schedule</string>
    <string name="start_date">Start date</string>
    <string name="duration">Duration</string>
    <string name="minus">-</string>
    <string name="duration_days">Duration(days)</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
    <string name="medicine_type">Medicine Type</string>
    <string name="no_medicine_found">No medicine found</string>
    <string name="medicine_dashboard">Medicine Dashboard</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="resedule">Resedule</string>
    <string name="not_taken">Not taken</string>
    <string name="taken">Taken</string>
    <string name="all_medicine">All medicine</string>

    <string-array name="schedule_arrays">
        <item>Once a day</item>
        <item>Twice a day</item>
        <item>3 times a day</item>
        <item>4 times a day</item>
        <item>5 times per day</item>

    </string-array>
    <string-array name="take_arrays">
        <item>Tablet</item>
        <item>Liquied</item>
    </string-array>
    <string-array name="tablet_arrays">
        <item>1 tab</item>
        <item>2 tab</item>
        <item>3 tab</item>
        <item>4 tab</item>

    </string-array>
    <string-array name="liquied_arrays">
        <item>0.5 ml</item>
        <item>1.00 ml</item>
        <item>1.25 ml</item>
        <item>1.50 ml</item>
        <item>1.75 ml</item>
        <item>2.00 ml</item>

    </string-array>
</resources>
