<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d5d5d7"
    android:orientation="vertical"
    tools:context="com.example.shipon.medicinereminder.activity.AddMedicineActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/Toolbar"
        theme="@style/MyToolbarStyle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#277edf"
        app:popupTheme="@style/Theme.AppCompat.NoActionBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:gravity="center"
                android:text="@string/add_medicine"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <ImageView
                android:onClick="closeAddMedicineActivity"
                android:layout_marginRight="10dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_close_black_24dp" />

        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/medicine_name"
                        android:textColor="@color/blue"
                        android:textSize="20sp" />


                    <EditText
                        android:id="@+id/MedicineNameET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/black" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/schedule"
                        android:textColor="#277edf"
                        android:textSize="20sp" />


                    <Spinner
                        android:id="@+id/ScheduleSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:entries="@array/schedule_arrays"
                        android:gravity="center"
                        android:spinnerMode="dialog">

                    </Spinner>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/schedueRecyclerView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="3dp">

                    </android.support.v7.widget.RecyclerView>
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/start_date"
                        android:textColor="#277edf"
                        android:textSize="20sp" />


                    <TextView
                        android:layout_marginBottom="5dp"
                        android:id="@+id/PickDateTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Pick date"
                        android:textSize="16sp" />


                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/duration"
                        android:textColor="#277edf"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <Button
                            android:layout_width="40dp"
                            android:layout_height="wrap_content"
                            android:backgroundTint="#858588"
                            android:gravity="center"

                            android:minHeight="0dp"
                            android:minWidth="0dp"
                            android:text="@string/minus"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat"
                            android:textColor="#FFFFFF" />

                        <EditText
                            android:id="@+id/DurationET"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edit_text_style"
                            android:gravity="center"
                            android:minHeight="0dp"
                            android:minWidth="0dp"
                            android:text="0"
                            android:textAllCaps="false" />

                        <Button
                            android:layout_width="40dp"
                            android:layout_height="wrap_content"
                            android:backgroundTint="#858588"
                            android:drawableTint="#000000"
                            android:gravity="center"
                            android:minHeight="0dp"
                            android:minWidth="0dp"
                            android:text="+"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat"
                            android:textColor="#FFFFFF" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="Medicine Type"
                        android:textColor="#277edf"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">


                        <Spinner
                            android:id="@+id/TabletOrLiquiedSpinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"


                            android:entries="@array/take_arrays"
                            android:spinnerMode="dialog" />

                        <Spinner
                            android:id="@+id/TabletOrLiquiedQuantitySpinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:spinnerMode="dialog" />

                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button

            android:id="@+id/SubmitBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FF1142E4"
            android:onClick="clickOnSubmit"
            android:text="Submit"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>